[tool.poetry]
name = "vkwave"
version = "0.2.10"
description = "Framework for building high-performance & easy to scale projects interacting with VK's API."
authors = ["prostomarkeloff", "kesha1225"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/fscdev/vkwave"
repository = "https://github.com/fscdev/vkwave"
keywords = [
        "vk",
        "vkontakte",
        "api",
        "framework",
        "wrapper",
        "asyncio",
        "bots"
]
classifiers = [
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]
build = "build.py"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fscdev/vkwave/issues"

[tool.poetry.dependencies]
python = "^3.7"

pydantic = "^1.4"
typing_extensions = "^3.7.4"

aiohttp = { version="^3.6"}
aioredis = { version="^1.3", optional = true }

[tool.poetry.dev-dependencies]
# Lint
lxml = "^4.5.0"
mypy = "^0.770"
isort = "^4.3"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
mypy_extensions = "^0.4.3"
black = {version = "^19.0", allow-prereleases = true}

# Docs
mkdocs = "^1.1"
mkdocs-material = "^7.0"
mkautodoc = "^0.1.0"
pymdown-extensions = "^6.1"
markdown-include = "^0.5.1"

# Tests
pytest = "^5.4"
pytest-cov = "^2.8"
pytest-asyncio = "^0.10.0"

# Tests deps
aiohttp = "^3.6"
aioredis = "^1.3"
python-dotenv = "^0.12.0"
Cython = "^0.29.21"

[tool.poetry.extras]
storage-redis = ["aioredis"]
all = ["aioredis"]

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.pydocstyle]
ignore = "D100"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
