[tool.poetry]
name = "vkwave"
version = "0.2.17"
description = "Framework for building high-performance & easy to scale projects interacting with VK's API."
authors = ["prostomarkeloff", "kesha1225"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/fscdev/vkwave"
repository = "https://github.com/fscdev/vkwave"
keywords = [
        "vk",
        "vkontakte",
        "api",
        "framework",
        "wrapper",
        "asyncio",
        "bots"
]
classifiers = [
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]
build = "build.py"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fscdev/vkwave/issues"

[tool.poetry.dependencies]
python = "^3.7"

pydantic = "^2.0.2"
typing_extensions = "^4.6.1"

aiohttp = { version="^3.6"}
aioredis = { version="^1.3", optional = true }

[tool.poetry.dev-dependencies]
# Lint
lxml = "^4.5.0"
mypy = "^0.812"
isort = "^5.7"
flake8 = "^4.0.0"
flake8-docstrings = "^1.5.0"
mypy_extensions = "^0.4.3"
black = "^22.1.0"

# Docs
mkdocs = "^1.1"
mkdocs-material = "^7.0"
mkautodoc = "^0.1.0"
markdown-include = "^0.6.0"
mkdocs-redirects = "^1.0.2"
mkdocs-static-i18n = "^0.12"
mkdocstrings = "^0.15.2"

# Tests
pytest = "^6.2"
pytest-cov = "^2.8"
pytest-asyncio = "^0.14.0"

# Tests deps
aiohttp = "^3.6"
aioredis = "^1.3"
python-dotenv = "^0.15.0"
Cython = "^0.29.21"
Pygments = "^2.8.1"

[tool.poetry.extras]
storage-redis = ["aioredis"]
all = ["aioredis"]

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.pydocstyle]
ignore = "D100"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
