[tool.poetry]
name = "vkwave-client"
version = "0.0.1"
description = "Access VK-API."
authors = ["prostomarkeloff"]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
